--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- 引入 p5.js 函式庫 -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.js"></script> 
 
-    <title>Sketch</title>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+<script src="libraries/p5.min.js"></script>
+<script src="libraries/p5.sound.min.js"></script>
+<!-- 引入您的分數顯示邏輯 (必須在 p5.js 之後載入) -->
+<!-- 確保 JS 檔案載入順序正確，以讓變數作用於全域範圍 [4] -->
+<script src="sketch.js"></script>
 
-    <script src="libraries/p5.min.js"></script>
-    <script src="libraries/p5.sound.min.js"></script>
-  </head>
-
-  <body>
-    <script src="sketch.js"></script>
-  </body>
-</html>
+<style>
+    /* 讓內容置中方便查看 */
+    body { 
+        margin: 0; 
+        display: flex; 
+        flex-direction: column;
+        align-items: center; 
+        min-height: 100vh; 
+        font-family: Arial, sans-serif;
+    }
+    #h5pContainer {
+        margin-top: 20px;
+    }
+    /* p5.js Canvas 會自動創建在 body 內 */
+</style>
